--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "prettier": "^2.2.1",
     "qunit": "^2.14.1",
     "qunit-dom": "^1.6.0",
-    "tailwindcss": "^2.2.9"
+    "tailwindcss": "^2.2.9",
+    "tracked-built-ins": "^1.1.1"
   },
   "engines": {
     "node": "10.* || >= 12"
